--- a/themes/jtherczeg-grill-child/theme.yaml
+++ b/themes/jtherczeg-grill-child/theme.yaml
@@ -1,7 +1,8 @@
 name: 'Grill - Copy'
-code: Grill
-description: 'templatemo''s Free, responsive restaurant theme with HTML5 layouts, converted for OctoberCMS'
-author: 'templatemo &amp; József Tamás Herczeg'
+description: ''
+author: ''
+homepage: ''
+code: ''
 authorUrl: 'http://www.templatemo.com/'
 form:
     fields:
